--- a/Digital_API/Digitalizacao_API/platformio.ini
+++ b/Digital_API/Digitalizacao_API/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	arduino-libraries/Arduino_JSON@^0.2.0
 	bblanchon/ArduinoJson@^6.21.0
 	paulstoffregen/Time@^1.6.1
+	arduino-libraries/NTPClient@^3.2.1
